# PetitGato

./: 404.html  PetitGato.pbix  README.md  gerar_dados.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Scripts/: crate_tables_fks.sql  gerar_dados.py
Terraform/Terraform/: .env.example  .terraform.lock.hcl  Explicacao.md  package-lock.json  variables.tf
Terraform/Terraform/python/: elt_sql_1_tabela.py  pyproject.toml
azure-data-lake-terraform/: index.html
contribuitors/: index.html
dimensional_model/: index.html
docs/: azure-data-lake-terraform.md  contribuitors.md  dashboard.md  dimensional_model.md  environment_setup.md  index.md  ingestion.md  installation.md  introduction.md  overview.md  team.md  tools.md  transformation.md
docs/stylesheets/: extra.css
ingestion/: index.html
installation/: index.html
overview/: index.html
petit-gato/: .env.example  .gitignore  README.md  criar_dataset.py  criar_landing_zone.py  gerar_dados.py  pyproject.toml
scripts/: Gerar dados.py  Landing zone.py  PetitGato - Bronze.py  PetitGato - Gold.py  PetitGato - Silver.py  PetitGato.dbc
search/: search_index.json
site/: index.html  sitemap.xml
site/azure-data-lake-terraform/: index.html
site/contribuitors/: index.html
site/dashboard/: index.html
site/environment_setup/: index.html
site/ingestion/: index.html
site/installation/: index.html
site/introduction/: index.html
site/overview/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/tools/: index.html
site/transformation/: index.html
stylesheets/: extra.css
team/: index.html
terraform/: .gitignore  main.tf  output.tf  readme.md  variables.tf
teste/: mkdocs.yml
teste/docs/: index.md
transformation/: index.html
