[tool.poetry]
name = "python_elt"
version = "0.1.0"
description = ""
authors = ["Yuri Lopes Machado <yurilopesmachado@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.7"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
azure-identity = "^1.16.0"
azure-storage-file-datalake = "^12.15.0"
azure-core = "^1.30.1"
pyodbc = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
